solved bug of dialog z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,7 +31,3 @@ html, body {
   color: #333;
   text-align: center;
 }
-
-.el-dialog__wrapper {
-  z-index: 9999 !important;
-}
